refactored to use subdir Makefiles

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,18 +1,9 @@
 SERVICES = monolith hello auth
+GOALS = build clean
+
+$(GOALS): $(SERVICES)
 
 $(SERVICES):
-	go build --tags netgo --ldflags '-extldflags "-lm -lstdc++ -static"' -o ./$@/$@ ./$@/
+	$(MAKE) -C $@ $(MAKECMDGOALS)
 
-curl:
-	curl "http://127.0.0.1:10080"
-
-login:
-	curl http://127.0.0.1:10080/login -u user
-
-token:
-	source token.sh
-
-clean:
-	$(foreach service,$(SERVICES),rm -vf $(service)/$(service))
-
-.PHONY: $(SERVICES)
+.PHONY: $(GOALS) $(SERVICES)
